--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -1,3 +1,19 @@
+.Credentials{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    background-color: var(--color-bg-varient);
+    width: auto;
+    letter-spacing: 2px;
+}
+
+.Credentials-head{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .project__container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
